--- a/.github/workflows/BucketContentList.yml
+++ b/.github/workflows/BucketContentList.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: <Global>
+        aws-region: us-east-1
         
     - name: List S3 Buckets
       run: |
